[tool.poetry]
name = "lab-ds"
version = "0.0.1"
description = "LAB project data science repository"
authors = ["Nikola Rusakov <nikola.rusakov@rusakov.cz>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "lab_ds"}]

[tool.poetry.dependencies]
python = "^3.10.13"
polars= "^0.19.0"
pyprql = "^0.10.0"
dagster = "^1.1.7"
jupysql = "0.10.2"
pyarrow = "13.0.0"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.64.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
